--- a/practice-4/practice-4.html
+++ b/practice-4/practice-4.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <script>
-        let a = prompt("Please input a number from 1 to 7");
-        let days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-       
- 
-            alert(days[a-1])
-           let b = prompt( "Please input a number from 1 to 12 ")
-            let month =  ["January", "February", "March", "April", "May", "June", "July", "August", "September","October", "November", "December"];
-              alert(month[b-1])
-    </script>
+    <script src="./practice-4.js"></script>
 </body>
+
 </html>
